src/utils/snapshots/sentry_cli__utils__vcs__generate_patch_set_base.snap
---
source: src/utils/vcs.rs
expression: patch_set
---
- patch_set:
    - path: foo2.js
      type: M
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"third commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo2.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"second commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"initial commit\"\n"
  id: "[id]"
